# branch_detection

./: .gitignore  CMakeLists.txt  camera_frame_broadcaster.py  imgui.ini  package.xml  readme.md  todo.txt
include/branch_surface/: filtering.hpp  surface_reconstruction.hpp
launch/: frame_broadcaster.launch  frame_broadcaster_kinect2.launch  frame_broadcaster_realsense.launch  hsr.launch  kinect2_get_surface.launch  new_realsense_sr430.launch  realsense_get_surface.launch  surface_detection.launch  surface_reconstruction.launch
models/branch_1/: Fullsize_0.pcd  Keypoints_0.pcd  LRFs_0.ply  Preprocessed_0.pcd  RGBregiongrow0.pcd  Signature_0.ply  combined.ply  could_transformed.ply  projected.ply
models/branch_1/mesh/: branch_1.stl  untitled.blend1
models/branch_1/pcd/: Fullsize_0.ply  LRFs_0.ply  Preprocessed_0.pcd  Preprocessed_0.ply  Signature_0.ply
models/branch_2/: Downsampled_0.ply  Keypoints_0.pcd  LRFs_0.ply  Preprocessed_0.pcd  RGBregiongrow0.ply  RGBregiongrow1.ply  RGBregiongrow2.ply  Regiongrow0.ply  Regiongrow1.ply  Regiongrow2.ply  Regiongrow3.ply  Signature_0.ply
models/branch_2/branch_surface/: LRFs_0.ply
models/branch_2/mesh/: mesh.dae
models/branch_3/: Concatinated_0.ply  LRFs_0.ply  Preprocessed_0.pcd  Signature_0.ply
models/stone_9/: Downsampled_0.ply  Keypoints_0.pcd  LRFs_0.ply  Preprocessed_0.pcd  RGBregiongrow0.ply  Regiongrow0.ply  Signature_0.ply
models/test/: Concatinated_0.ply  Downsampled_0.ply  Downsampled_3.ply  Downsampled_test.ply  Keypoints_0.pcd  LRFs_0.ply  Preprocessed_0.pcd  RGBregiongrow0.ply  RGBregiongrow1.ply  RGBregiongrow2.ply  RGBregiongrow3.ply  Regiongrow0.ply  Regiongrow1.ply  Regiongrow2.ply  Signature_0.ply  cloud_transformed.ply  combined.ply  could_transformed.ply  poisson.ply  projected.ply  reoriented.ply
models/test2/: Downsampled_0.ply  Keypoints_0.pcd  LRFs_0.ply  Signature_0.ply
params/: detection.yaml  refinement.yaml  surface_reconstruction.yaml
rviz/: pointcloud.rviz
scene/: Fullsize_0.pcd  Fullsize_0.ply  LRFs_0.ply  Preprocessed_0.pcd  Preprocessed_0.ply  Signature_0.ply
src/: filtering.cpp  surface_reconstruction.cpp  surface_reconstruction_service_node.cpp
srv/: DetectObject.srv  LocaliseObjects.srv  LocateRedDot.srv
(+48 files in other folders)
