<?xml version="1.0"?>
<package>
  <name>branch_surface</name>
  <version>0.0.0</version>
  <description>The branch surface package</description>
  <maintainer email="hironroiyh@gmail.com"> Hironori Yoshida </maintainer>
  <license>BSD</license>

  <!-- <author email="hyoshida@preferred.j">hironori yoshida</author> -->

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>

  <export>

  </export>
</package>
